[tool.poetry]
name = "cans"
version = "0.1.1"
description = "Robust, composable, functional containers"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
packages = [
    { include = "cans", from = "src" },
]
readme = "README.rst"
include = ["CHANGELOG.rst", "README.rst"]
repository = "https://github.com/ariebovenberg/cans"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = "^1.0", python = "<3.8"}
typing-extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
isort = "^5.7.0"
mypy = "^0.812"
pytest = "^6.2.1"
tox = "^3.20.1"
black = "^20.8b1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.hg
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
force_exclude = 'tests/py310_only'

[tool.isort]
profile = 'black'
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
