[tool.poetry]
name = "cans"
version = "1.0.0"
description = "Robust, composable, functional containers"
authors = ["Arie Bovenberg <a.c.bovenberg@gmail.com>"]
license = "MIT"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "cans", from = "src" },
]
readme = "README.rst"
include = ["CHANGELOG.rst", "README.rst"]
repository = "https://github.com/ariebovenberg/cans"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = "^1.0", python = "<3.8"}
typing-extensions = ">=4,<5"


[tool.poetry.group.test.dependencies]
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
pytest-mypy-plugins = "^1.10.0"
pytest = "^7"

[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"

[tool.poetry.group.typecheck.dependencies]
mypy = "^0.971"

[tool.poetry.group.isort.dependencies]
isort = "^5.7.0"

[tool.poetry.group.dev.dependencies]
tox = "^3.20.1"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.hg
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
force_exclude = 'tests/py310_only'

[tool.isort]
profile = 'black'
line_length = 79

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
